--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "assessment",
   "version": "0.1.0",
   "private": true,
+  "main" : "server.js",
+  "engines": {
+    "npm":"6.14.1",
+    "node": "^12.13.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -20,7 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "heroku-postbuild":"npm install",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
